SLCORE-638 Remove sync and updateProject in favour of RPC